--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "crypto": "^1.0.1",
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-cors": "^2.0.0",
+    "egg-redis": "^2.0.0",
+    "egg-scripts": "^2.5.0",
+    "egg-sequelize": "^3.1.4",
+    "egg-session-redis": "^1.0.0",
+    "egg-validate": "^1.0.0",
+    "egg-weapp-sdk": "^1.1.1",
+    "mysql2": "^1.5.3",
+    "umoji": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -23,7 +33,7 @@
   "scripts": {
     "start": "egg-scripts start --daemon --title=egg-server-interceptor-service",
     "stop": "egg-scripts stop --title=egg-server-interceptor-service",
-    "dev": "egg-bin dev",
+    "dev": "egg-bin dev --port 7301",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
