--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "egg-validate": "^1.0.0",
     "egg-weapp-sdk": "^1.1.1",
     "mysql2": "^1.5.3",
+    "qiniu": "^7.1.3",
     "umoji": "^1.0.0"
   },
   "devDependencies": {
