--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "egg-session-redis": "^1.0.0",
     "egg-validate": "^1.0.0",
     "egg-weapp-sdk": "^1.1.1",
+    "gt3-sdk": "^2.0.0",
     "mysql2": "^1.5.3",
     "qiniu": "^7.1.3",
     "umoji": "^1.0.0"
